--- a/PlasticAI/package.json
+++ b/PlasticAI/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-cpu": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
     "platform": "^1.3.6",
     "react": "19.0.0",
